<resources>
    <string name="app_name">MoP_01</string>
    <string name="hello">Hello World!</string>
    <string name="btn1">Button 1</string>
    <string name="btn2">Button 2</string>
    <string name="btn3">Button 3</string>
    <string name="open">Open…</string>
    <string name="ctrl_o">Ctrl-O</string>
    <string name="save_as">Save As…</string>
    <string name="ctrl_shift_s">Ctrl-Shift-S</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="choi">Choi</string>
    <string name="exPhoneNum">+82–31–724–4562</string>
    <string name="_10">10</string>
    <string name="call">CALL</string>
    <string name="isbn">ISBN:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="log_in">Sign in</string>
    <string name="info">Info</string>
    <string name="grade">Grade</string>
    <string name="sign_up">Sign Up</string>
    <string name="input_id">Input ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="gachon_univ">Gachon Univ.</string>
    <string name="subject">Subject</string>
    <string name="score">Score</string>
    <string name="credit">Credit</string>
    <string name="enter_your_first_and_last_name">Enter your first and last name</string>
    <string name="coffee_addons">What else in Your coffee?</string>
    <string name="sugar">Sugar</string>
    <string name="cream">Cream</string>
    <string name="pay">Pay</string>
    <string name="what_type_of_coffee">What type of coffee?</string>
    <string name="decaf">Decaf</string>
    <string name="colombian">Colombian</string>
    <string name="expresso">Expresso</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_fragment">Menu Fragment</string>
    <string name="return_to_main">Return to Main</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="this_is_fragment_1">This is fragment #1</string>
    <string name="this_is_fragment_2">This is fragment #2</string>
    <string name="get_text_in_fragment_1">Get text in Fragment #1</string>
    <string name="animation">Animation</string>
    <string name="doggy_animation">Doggy Animation</string>
    <string name="shared_preferences_login">Shared Preferences login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
    <string name="working">Working......</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="my_position">My position:</string>
    <string name="i_want_my_location">I want my Location</string>
    <string name="gravity_values">Gravity Values</string>
</resources>